Fix issues for theme submission
Changes in this commit:

* make use of the mainSections variable to display multiple content
types dynamically on the homepage instead of enforcing the posts type

* fix formatting issues in the head.html partial

* disable link to imprint in footer

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -9,10 +9,10 @@ theme = "Bleach"
   author = "Your Name"
   logo = "images/logo.jpg"
   dateFormat = "Jan 2, 2006"
-   googleAnalitycsID = "Your ID"  
+   googleAnalitycsID = "Your ID"
 
   [params.footer]
-    impressum = true
+    impressum = false
     company = "example Inc."
 
   [params.social]
